# opengl-tut

./: .gitignore  CMakeLists.txt
res/glsl/: shader.glsl
src/: bufferLayout.cpp  bufferLayout.h  indexBuffer.cpp  indexBuffer.h  libmygraph.cpp  libmygraph.h  main.cpp  renderer.cpp  renderer.h  test.cpp  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h
